--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,11 @@
     margin-top: 70px;
 
 }
-.Download{
-    margin-top: 100px;
-    margin-left: 0px;
-    
+.fa:hover{
+    transform: rotate(25deg);
 }
+@media (max-width: 768px) {
+    .d2d {
+      visibility: hidden;
+    }
+  }
